--- a/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/SocialIcons/styles.module.css
+++ b/src/@dvcorg/gatsby-theme-iterative/components/LayoutHeader/Nav/SocialIcons/styles.module.css
@@ -4,15 +4,15 @@
   padding: 0;
   margin: 0 16px 0 4px;
 
-  @media (--xl-scr) {
+  @media screen(xl) {
     margin: 0 24px 0 12px;
   }
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     margin: 0 16px 0 0;
   }
 
-  @media (--sm-scr) {
+  @media screen(smMax) {
     margin: 0 16px 0 4px;
   }
 }
@@ -26,7 +26,7 @@
   padding: 12px;
   margin: 0;
 
-  @media (--md-scr) {
+  @media screen(mdMax) {
     width: 20px;
     height: 20px;
     padding: 6px;
